@@ -146,14 +146,21 @@ public class MemoryOptionsDemo {
 	-Xss
 	-XX:ThreadStackSize
 
-# 设置新生代大小
+# 设置年轻代大小
 	-Xmn
+	-XX:NewSize
+
+# 年轻代最大大小
+	-XX:MaxNewSize
 
 # 设置元空间大小
 	-XX:MetaspaceSize
 	元空间的本质和永久代类似，都是对JVM规范中方法区的实现。
 	不过元空间和永久代的区别在于：元空间并不在虚拟机中，而是使用本地内存。
 	因此，默认情况下，元空间的大小仅受本地内存限制（默认只用20几M）
+
+# 方法区最大大小
+	-XX:MaxMetaspaceSize
 
 # 典型设置案例
 	-Xms128m -Xmx4096m -Xss1024k -XX:MetaspaceSize=512m -XX:+PrintCommandLineFlags -XX:+PrintGCDetails -XX:+UseSerialGC
@@ -176,6 +183,11 @@ public class MemoryOptionsDemo {
 # 设置垃圾最大年龄
 	-XX:MaxTenuringThreshold
 	如果设置为0，则新生代对象不经过Survivor区，直接进入老年代。对于老年代比较多的应用，可以提高效率。如果将此值设置为一个较大值，则新生代对象会在Survivor区进行多次复制，这样可以增加对象在新生代的存活时间，增加在新生代即被回收的概率。
+
+# 当JVM堆内存发生溢出时，也就是OOM，自动生成dump文件
+	-XX:+HeapDumpOnOutOfMemoryError
+# 指定堆内存溢出打印目录
+	-XX:HeapDumpPath=heap.hprof
 ```
 
 # 2 常用命令
@@ -197,7 +209,10 @@ public class MemoryOptionsDemo {
 			no option 输出全部的参数和系统属性
 			-flag name 输出对应名称的参数
 			-flag [+|-]name 开启或者关闭对应名称的参数
+
+# 实时修改某个进程中的JVM参数的值，PrintFlagsFinal 中括号中的值为 manageable 的属性才支持实时修改
 			-flag name=value 设定对应名称的参数
+			
 			-flags 输出全部的参数
 			-sysprops 输出系统属性
 		pid 对应jvm的进程id
@@ -330,7 +345,6 @@ class DeadLock implements Runnable{
 
 ```markdown
 # jmap 生成堆转储快照
-	??????-XX:+PrintFlagsFinal -Xms300M -Xmx300M
 	jmap -heap PID
         Attaching to process ID 12648, please wait...
         Debugger attached successfully.
@@ -368,18 +382,18 @@ class DeadLock implements Runnable{
 
 一般 dump 下来的文件可以结合工具来分析。
 
-3 常用工具
+# 3 常用工具
 
-3.1 jconsole 
+## 3.1 jconsole 
 
-JConsole工具是JDK自带的可视化监控工具。查看java应用程序的运行概况、监控堆信息、永久区使用 情况、类加载情况等。 
+JConsole工具是JDK自带的可视化监控工具。查看java应用程序的运行概况、监控堆信息、永久区使用情况、类加载情况等。 
 
 ```markdown
 # 命令行中输入
 	jconsole
 ```
 
-3.2 jvisualvm
+## 3.2 jvisualvm
 
 可以监控本地的 Java 进程的 CPU，类，线程等
 
@@ -388,7 +402,7 @@ JConsole工具是JDK自带的可视化监控工具。查看java应用程序的�
 	jvisualvm
 ```
 
-3.2.1 visualgc 插件
+### 3.2.1 visualgc 插件
 
 `visualgc` 插件下载链接 https://visualvm.github.io/pluginscenters.html --> 选择对应版本链接 --> Tools --> Visual GC
 
@@ -398,13 +412,155 @@ Java VisualVM --> 工具 --> 插件 --> 已下载 --> 添加插件 --> 选择下
 
 <img src="JVM 实战.assets/image-20210207122304798.png" alt="image-20210207122304798" style="zoom:80%;" />
 
+### 3.2.2 监控远端 Java 进程
 
+```markdown
+# 演示部署在阿里云服务器上的tomcat
+# 1.在 visualvm 中选中“远程”，右击“添加”
+# 2.主机名上写服务器的ip地址，比如31.100.39.63，然后点击“确定”
+# 3.右击该主机“31.100.39.63”，添加“JMX”[也就是通过JMX技术具体监控远端服务器哪个Java进程]
+# 4 要想让服务器上的tomcat被连接，需要改一下 bin/catalina.sh 这个文件
+	JAVA_OPTS="$JAVA_OPTS -Dcom.sun.management.jmxremote - Djava.rmi.server.hostname=31.100.39.63 -Dcom.sun.management.jmxremote.port=8998 -Dcom.sun.management.jmxremote.ssl=false - Dcom.sun.management.jmxremote.authenticate=true - Dcom.sun.management.jmxremote.access.file=../conf/jmxremote.access - Dcom.sun.management.jmxremote.password.file=../conf/jmxremote.password"
+# 5.在 ../conf 文件中添加两个文件jmxremote.access和jmxremote.password
+	jmxremote.access 文件
+			guest readonly
+			manager readwrite
+	jmxremote.password 文件
+			guest guest
+			manager manager
+# 授予权限
+	chmod 600 *jmxremot*
+# 6.将连接服务器地址改为公网ip地址
+	hostname -i 查看输出情况 
+		172.26.225.240 172.17.0.1 
+	vim /etc/hosts 
+		172.26.255.240 31.100.39.63
+# 7.设置上述端口对应的阿里云安全策略和防火墙策略，启动tomcat
+# 8.在刚才的JMX中输入8998端口，并且输入用户名和密码则登录成功
+	端口:8998
+	用户名:manager
+	密码:manager
+```
 
+![image-20210209171648190](JVM 实战.assets/image-20210209171648190.png)
 
+![image-20210209171741144](JVM 实战.assets/image-20210209171741144.png)
 
+## 3.3 Arthas
 
+Arthas 是 Alibaba 开源的 Java 诊断工具，采用`命令行交互模式`，是`排查jvm相关问题`的利器。
 
+```shell
+curl -O https://alibaba.github.io/arthas/arthas-boot.jar 
+java -jar arthas-boot.jar 
+# 然后可以选择一个Java进程
+```
 
+![image-20210209175239266](JVM 实战.assets/image-20210209175239266.png)
 
+**常用命令**
 
+```
+version:查看arthas版本号 
+help:查看命名帮助信息 
+cls:清空屏幕 
+session:查看当前会话信息 
+quit:退出arthas客户端 
+---
+dashboard:当前进程的实时数据面板
+thread:当前JVM的线程堆栈信息
+jvm:查看当前JVM的信息
+sysprop:查看JVM的系统属性
+---
+sc:查看JVM已经加载的类信息
+dump:dump已经加载类的byte code到特定目录
+jad:反编译指定已加载类的源码
+---
+monitor:方法执行监控
+watch:方法执行数据观测
+trace:方法内部调用路径，并输出方法路径上的每个节点上耗时
+stack:输出当前方法被调用的调用路径
+......
+```
+
+## 3.4 MAT
+
+Java 堆分析器，用于`查找内存泄漏`。Heap Dump，称为堆转储文件，是Java进程在某个时间内的快照。
+
+下载地址 https://www.eclipse.org/mat/downloads.php
+
+```markdown
+# 获取Dump文件
+# 手动
+	jmap -dump:format=b,file=heap.hprof 44808
+# 自动
+	-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=heap.hprof
+```
+
+**Histogram**
+
+Histogram可以列出内存中的对象，对象的个数及其大小。
+
+`Class Name` 类名称，java类名 
+
+`Objects` 类的对象的数量，这个对象被创建了多少个 
+
+`Shallow Heap` 一个对象内存的消耗大小，不包含对其他对象的引用 
+
+`Retained Heap` 是shallow Heap的总和，即该对象被GC之后所能回收到内存的总和 
+
+```
+右击类名 --> List Objects --> with incoming references -->列 出该类的实例 
+右击Java对象名 --> Merge Shortest Paths to GC Roots --> exclude all ... --> 找到GC Root以及原因 
+```
+
+**Leak Suspects**
+
+查找并分析内存泄漏的可能原因
+
+```
+Reports --> Leak Suspects --> Details 
+```
+
+**Top Consumers**
+
+列出大对象
+
+### 	在线 Java 线程 Dump 分析
+
+https://thread.console.perfma.com/
+
+![image-20210209175816599](JVM 实战.assets/image-20210209175816599.png)
+
+## 3.5 GC 日志分析工具
+
+《JVM 基础》SOFE 和 OOM 中做过对 GC 日志文件的分析。
+
+这里采用图形化工具分析日志的信息，得先拿到GC日志文件才行，所以得先配置一下：
+
+```
+-XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -Xloggc:gc.log
+```
+
+GC 日志分析，主要关注`吞吐量`和`停顿时间`两个重要指标。
+
+**在线**
+
+http://gceasy.io
+
+![image-20210209174747045](JVM 实战.assets/image-20210209174747045.png)
+
+**GCViewer**
+
+```markdown
+# 启动
+	java -jar gcviewer-1.36-SNAPSHOT.jar
+# 选择对应的 gc.log
+```
+
+![image-20210209174200407](JVM 实战.assets/image-20210209174200407.png)
+
+![image-20210209174443644](JVM 实战.assets/image-20210209174443644.png)
+
+------
 
